tests/miniJava/neg/004961_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] java ( int [] java , int [] false ) { return 0 ; } }
